k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jquery-svc
  namespace: jquery
spec:
  selector:
    app: jquery
  ports:
  - port: 80
    targetPort: 80
